--- a/stories/index.html
+++ b/stories/index.html
@@ -373,6 +373,36 @@
   </thead>
   <tbody>
     <tr>
+      <td>0001</td>
+      <td><a href="/stories/bn/0001_একজন-খুব-লম্বা-মানুষ_slides.html" target="_blank">একজন খুব লম্বা মানুষ</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbTE2ZTVBSDZvblU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="bn0001"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0004</td>
+      <td><a href="/stories/bn/0004_ছাগল-কুকুর-এবং-গরু_slides.html" target="_blank">ছাগল, কুকুর এবং গরু</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbTE2ZTVBSDZvblU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="bn0004"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0006</td>
+      <td><a href="/stories/bn/0006_আনান্সি-এবং-জ্ঞান_slides.html" target="_blank">আনান্সি এবং জ্ঞান</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbTE2ZTVBSDZvblU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="bn0006"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0158</td>
+      <td><a href="/stories/bn/0158_মুরগী-এবং-ঈগল_slides.html" target="_blank">মুরগী এবং ঈগল</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbTE2ZTVBSDZvblU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="bn0158"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0243</td>
+      <td><a href="/stories/bn/0243_ছুটির-দিনে-দাদুর-সাথে_slides.html" target="_blank">ছুটির দিনে দাদুর সাথে</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbTE2ZTVBSDZvblU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="bn0243"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0253</td>
       <td><a href="/stories/bn/0253_আমার-ছবির-বই_slides.html" target="_blank">আমার ছবির বই</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbTE2ZTVBSDZvblU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -4397,7 +4427,7 @@
       <td>0001</td>
       <td><a href="http://africanstorybook.org/stories/very-tall-man">A very tall man</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0001">ar</a>, <a href="#da0001">da</a>, <a href="#de0001">de</a>, <a href="#eo0001">eo</a>, <a href="#es0001">es</a>, <a href="#fa0001">fa</a>, <a href="#gu0001">gu</a>, <a href="#hi0001">hi</a>, <a href="#it0001">it</a>, <a href="#ja0001">ja</a>, <a href="#ko0001">ko</a>, <a href="#nn0001">nn</a>, <a href="#no0001">no</a>, <a href="#pa0001">pa</a>, <a href="#ru0001">ru</a>, <a href="#sv0001">sv</a>, <a href="#tl0001">tl</a>, <a href="#tr0001">tr</a>, <a href="#vi0001">vi</a>, <a href="#yue0001">yue</a>, <a href="#zh0001">zh</a></td>
+      <td><a href="#ar0001">ar</a>, <a href="#bn0001">bn</a>, <a href="#da0001">da</a>, <a href="#de0001">de</a>, <a href="#eo0001">eo</a>, <a href="#es0001">es</a>, <a href="#fa0001">fa</a>, <a href="#gu0001">gu</a>, <a href="#hi0001">hi</a>, <a href="#it0001">it</a>, <a href="#ja0001">ja</a>, <a href="#ko0001">ko</a>, <a href="#nn0001">nn</a>, <a href="#no0001">no</a>, <a href="#pa0001">pa</a>, <a href="#ru0001">ru</a>, <a href="#sv0001">sv</a>, <a href="#tl0001">tl</a>, <a href="#tr0001">tr</a>, <a href="#vi0001">vi</a>, <a href="#yue0001">yue</a>, <a href="#zh0001">zh</a></td>
     </tr>
     <tr>
       <td>0002</td>
@@ -4415,13 +4445,13 @@
       <td>0004</td>
       <td><a href="http://africanstorybook.org/stories/goat-dog-and-cow">Goat, Dog and Cow</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0004">ar</a>, <a href="#es0004">es</a>, <a href="#fa0004">fa</a>, <a href="#it0004">it</a>, <a href="#ko0004">ko</a>, <a href="#pa0004">pa</a>, <a href="#ru0004">ru</a>, <a href="#tl0004">tl</a>, <a href="#tr0004">tr</a>, <a href="#yue0004">yue</a>, <a href="#zh0004">zh</a></td>
+      <td><a href="#ar0004">ar</a>, <a href="#bn0004">bn</a>, <a href="#es0004">es</a>, <a href="#fa0004">fa</a>, <a href="#it0004">it</a>, <a href="#ko0004">ko</a>, <a href="#pa0004">pa</a>, <a href="#ru0004">ru</a>, <a href="#tl0004">tl</a>, <a href="#tr0004">tr</a>, <a href="#yue0004">yue</a>, <a href="#zh0004">zh</a></td>
     </tr>
     <tr>
       <td>0006</td>
       <td><a href="http://africanstorybook.org/stories/anansi-and-wisdom">Anansi and Wisdom</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0006">ar</a>, <a href="#eo0006">eo</a>, <a href="#es0006">es</a>, <a href="#fa0006">fa</a>, <a href="#it0006">it</a>, <a href="#ko0006">ko</a>, <a href="#no0006">no</a>, <a href="#pa0006">pa</a>, <a href="#ru0006">ru</a>, <a href="#tl0006">tl</a>, <a href="#tr0006">tr</a>, <a href="#vi0006">vi</a>, <a href="#yue0006">yue</a>, <a href="#zh0006">zh</a></td>
+      <td><a href="#ar0006">ar</a>, <a href="#bn0006">bn</a>, <a href="#eo0006">eo</a>, <a href="#es0006">es</a>, <a href="#fa0006">fa</a>, <a href="#it0006">it</a>, <a href="#ko0006">ko</a>, <a href="#no0006">no</a>, <a href="#pa0006">pa</a>, <a href="#ru0006">ru</a>, <a href="#tl0006">tl</a>, <a href="#tr0006">tr</a>, <a href="#vi0006">vi</a>, <a href="#yue0006">yue</a>, <a href="#zh0006">zh</a></td>
     </tr>
     <tr>
       <td>0007</td>
@@ -4709,7 +4739,7 @@
       <td>0158</td>
       <td><a href="http://africanstorybook.org/stories/hen-and-eagle">Hen and Eagle</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0158">ar</a>, <a href="#es0158">es</a>, <a href="#fa0158">fa</a>, <a href="#ko0158">ko</a>, <a href="#no0158">no</a>, <a href="#pa0158">pa</a>, <a href="#tl0158">tl</a>, <a href="#zh0158">zh</a></td>
+      <td><a href="#ar0158">ar</a>, <a href="#bn0158">bn</a>, <a href="#es0158">es</a>, <a href="#fa0158">fa</a>, <a href="#ko0158">ko</a>, <a href="#no0158">no</a>, <a href="#pa0158">pa</a>, <a href="#tl0158">tl</a>, <a href="#zh0158">zh</a></td>
     </tr>
     <tr>
       <td>0172</td>
@@ -4805,7 +4835,7 @@
       <td>0243</td>
       <td><a href="http://africanstorybook.org/stories/holidays-grandmother">Holidays with grandmother</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0243">ar</a>, <a href="#es0243">es</a>, <a href="#fa0243">fa</a>, <a href="#ko0243">ko</a>, <a href="#pa0243">pa</a>, <a href="#tl0243">tl</a>, <a href="#tr0243">tr</a>, <a href="#yue0243">yue</a>, <a href="#zh0243">zh</a></td>
+      <td><a href="#ar0243">ar</a>, <a href="#bn0243">bn</a>, <a href="#es0243">es</a>, <a href="#fa0243">fa</a>, <a href="#ko0243">ko</a>, <a href="#pa0243">pa</a>, <a href="#tl0243">tl</a>, <a href="#tr0243">tr</a>, <a href="#yue0243">yue</a>, <a href="#zh0243">zh</a></td>
     </tr>
     <tr>
       <td>0248</td>
