--- a/stories/index.html
+++ b/stories/index.html
@@ -1936,6 +1936,36 @@
       <td><a name="it0111"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0112</td>
+      <td><a href="/stories/it/0112_il-mio-corpo_slides.html" target="_blank">Il mio corpo</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQTUtRDJmNUIxRHM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="it0112"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0120</td>
+      <td><a href="/stories/it/0120_capelli_slides.html" target="_blank">Capelli</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQTUtRDJmNUIxRHM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="it0120"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0129</td>
+      <td><a href="/stories/it/0129_piccolo-fratellino-pigro_slides.html" target="_blank">Piccolo fratellino pigro</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQTUtRDJmNUIxRHM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="it0129"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0141</td>
+      <td><a href="/stories/it/0141_pollo-e-millepiede_slides.html" target="_blank">Pollo e Millepiede</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQTUtRDJmNUIxRHM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="it0141"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0156</td>
+      <td><a href="/stories/it/0156_il-coccodrillo-affamato_slides.html" target="_blank">Il coccodrillo affamato</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQTUtRDJmNUIxRHM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="it0156"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0253</td>
       <td><a href="/stories/it/0253_mio-libbro-di-immagini_slides.html" target="_blank">Mio libbro di immagini</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQTUtRDJmNUIxRHM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -4643,13 +4673,13 @@
       <td>0112</td>
       <td><a href="http://africanstorybook.org/stories/my-body">My body</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#aeb0112">aeb</a>, <a href="#ar0112">ar</a>, <a href="#de0112">de</a>, <a href="#eo0112">eo</a>, <a href="#es0112">es</a>, <a href="#fa0112">fa</a>, <a href="#gu0112">gu</a>, <a href="#ko0112">ko</a>, <a href="#nn0112">nn</a>, <a href="#no0112">no</a>, <a href="#pa0112">pa</a>, <a href="#tl0112">tl</a>, <a href="#yue0112">yue</a>, <a href="#zh0112">zh</a></td>
+      <td><a href="#aeb0112">aeb</a>, <a href="#ar0112">ar</a>, <a href="#de0112">de</a>, <a href="#eo0112">eo</a>, <a href="#es0112">es</a>, <a href="#fa0112">fa</a>, <a href="#gu0112">gu</a>, <a href="#it0112">it</a>, <a href="#ko0112">ko</a>, <a href="#nn0112">nn</a>, <a href="#no0112">no</a>, <a href="#pa0112">pa</a>, <a href="#tl0112">tl</a>, <a href="#yue0112">yue</a>, <a href="#zh0112">zh</a></td>
     </tr>
     <tr>
       <td>0120</td>
       <td><a href="http://africanstorybook.org/stories/hair">Hair</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ar0120">ar</a>, <a href="#es0120">es</a>, <a href="#fa0120">fa</a>, <a href="#gu0120">gu</a>, <a href="#ko0120">ko</a>, <a href="#no0120">no</a>, <a href="#pa0120">pa</a>, <a href="#tl0120">tl</a>, <a href="#yue0120">yue</a>, <a href="#zh0120">zh</a></td>
+      <td><a href="#ar0120">ar</a>, <a href="#es0120">es</a>, <a href="#fa0120">fa</a>, <a href="#gu0120">gu</a>, <a href="#it0120">it</a>, <a href="#ko0120">ko</a>, <a href="#no0120">no</a>, <a href="#pa0120">pa</a>, <a href="#tl0120">tl</a>, <a href="#yue0120">yue</a>, <a href="#zh0120">zh</a></td>
     </tr>
     <tr>
       <td>0121</td>
@@ -4685,7 +4715,7 @@
       <td>0129</td>
       <td><a href="http://africanstorybook.org/stories/lazy-little-brother">Lazy little brother</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ar0129">ar</a>, <a href="#de0129">de</a>, <a href="#es0129">es</a>, <a href="#fa0129">fa</a>, <a href="#gu0129">gu</a>, <a href="#ko0129">ko</a>, <a href="#nn0129">nn</a>, <a href="#no0129">no</a>, <a href="#pa0129">pa</a>, <a href="#tl0129">tl</a>, <a href="#yue0129">yue</a>, <a href="#zh0129">zh</a></td>
+      <td><a href="#ar0129">ar</a>, <a href="#de0129">de</a>, <a href="#es0129">es</a>, <a href="#fa0129">fa</a>, <a href="#gu0129">gu</a>, <a href="#it0129">it</a>, <a href="#ko0129">ko</a>, <a href="#nn0129">nn</a>, <a href="#no0129">no</a>, <a href="#pa0129">pa</a>, <a href="#tl0129">tl</a>, <a href="#yue0129">yue</a>, <a href="#zh0129">zh</a></td>
     </tr>
     <tr>
       <td>0130</td>
@@ -4709,7 +4739,7 @@
       <td>0141</td>
       <td><a href="http://africanstorybook.org/stories/chicken-and-millipede">Chicken and Millipede</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0141">ar</a>, <a href="#de0141">de</a>, <a href="#es0141">es</a>, <a href="#fa0141">fa</a>, <a href="#ko0141">ko</a>, <a href="#no0141">no</a>, <a href="#pa0141">pa</a>, <a href="#tl0141">tl</a>, <a href="#yue0141">yue</a>, <a href="#zh0141">zh</a></td>
+      <td><a href="#ar0141">ar</a>, <a href="#de0141">de</a>, <a href="#es0141">es</a>, <a href="#fa0141">fa</a>, <a href="#it0141">it</a>, <a href="#ko0141">ko</a>, <a href="#no0141">no</a>, <a href="#pa0141">pa</a>, <a href="#tl0141">tl</a>, <a href="#yue0141">yue</a>, <a href="#zh0141">zh</a></td>
     </tr>
     <tr>
       <td>0143</td>
@@ -4733,7 +4763,7 @@
       <td>0156</td>
       <td><a href="http://africanstorybook.org/stories/hungry-crocodile">The hungry crocodile</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0156">ar</a>, <a href="#de0156">de</a>, <a href="#es0156">es</a>, <a href="#fa0156">fa</a>, <a href="#gu0156">gu</a>, <a href="#ko0156">ko</a>, <a href="#nn0156">nn</a>, <a href="#no0156">no</a>, <a href="#pa0156">pa</a>, <a href="#sv0156">sv</a>, <a href="#tl0156">tl</a>, <a href="#yue0156">yue</a>, <a href="#zh0156">zh</a></td>
+      <td><a href="#ar0156">ar</a>, <a href="#de0156">de</a>, <a href="#es0156">es</a>, <a href="#fa0156">fa</a>, <a href="#gu0156">gu</a>, <a href="#it0156">it</a>, <a href="#ko0156">ko</a>, <a href="#nn0156">nn</a>, <a href="#no0156">no</a>, <a href="#pa0156">pa</a>, <a href="#sv0156">sv</a>, <a href="#tl0156">tl</a>, <a href="#yue0156">yue</a>, <a href="#zh0156">zh</a></td>
     </tr>
     <tr>
       <td>0158</td>
