--- a/stories/index.html
+++ b/stories/index.html
@@ -1966,10 +1966,58 @@
       <td><a name="it0156"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0201</td>
+      <td><a href="/stories/it/0201_bimbo-asino_slides.html" target="_blank">Bimbo Asino</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQTUtRDJmNUIxRHM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="it0201"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0210</td>
+      <td><a href="/stories/it/0210_tingi-e-le-mucche_slides.html" target="_blank">Tingi e le Mucche</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQTUtRDJmNUIxRHM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="it0210"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0231</td>
+      <td><a href="/stories/it/0231_il-libro-del-clima_slides.html" target="_blank">Il Libro del Clima</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQTUtRDJmNUIxRHM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="it0231"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0234</td>
+      <td><a href="/stories/it/0234_andiswa-stella-del-calcio_slides.html" target="_blank">Andiswa Stella del Calcio</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQTUtRDJmNUIxRHM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="it0234"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0243</td>
+      <td><a href="/stories/it/0243_vacanze-con-la-nonna_slides.html" target="_blank">Vacanze con la nonna</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQTUtRDJmNUIxRHM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="it0243"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0253</td>
       <td><a href="/stories/it/0253_mio-libbro-di-immagini_slides.html" target="_blank">Mio libbro di immagini</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQTUtRDJmNUIxRHM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="it0253"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0271</td>
+      <td><a href="/stories/it/0271_due_slides.html" target="_blank">Due</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQTUtRDJmNUIxRHM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="it0271"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0296</td>
+      <td><a href="/stories/it/0296_tom-il-venditore-di-banane_slides.html" target="_blank">Tom il venditore di banane</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQTUtRDJmNUIxRHM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="it0296"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0302</td>
+      <td><a href="/stories/it/0302_fuoco_slides.html" target="_blank">Fuoco</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQTUtRDJmNUIxRHM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="it0302"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
   </tbody>
 </table>
@@ -4799,7 +4847,7 @@
       <td>0201</td>
       <td><a href="http://africanstorybook.org/stories/donkey-child">Donkey Child</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0201">ar</a>, <a href="#es0201">es</a>, <a href="#fa0201">fa</a>, <a href="#ko0201">ko</a>, <a href="#pa0201">pa</a>, <a href="#tl0201">tl</a>, <a href="#zh0201">zh</a></td>
+      <td><a href="#ar0201">ar</a>, <a href="#es0201">es</a>, <a href="#fa0201">fa</a>, <a href="#it0201">it</a>, <a href="#ko0201">ko</a>, <a href="#pa0201">pa</a>, <a href="#tl0201">tl</a>, <a href="#zh0201">zh</a></td>
     </tr>
     <tr>
       <td>0204</td>
@@ -4817,7 +4865,7 @@
       <td>0210</td>
       <td><a href="http://africanstorybook.org/stories/tingi-and-cows">Tingi and the Cows</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0210">ar</a>, <a href="#es0210">es</a>, <a href="#fa0210">fa</a>, <a href="#ko0210">ko</a>, <a href="#no0210">no</a>, <a href="#pa0210">pa</a>, <a href="#tl0210">tl</a>, <a href="#yue0210">yue</a>, <a href="#zh0210">zh</a></td>
+      <td><a href="#ar0210">ar</a>, <a href="#es0210">es</a>, <a href="#fa0210">fa</a>, <a href="#it0210">it</a>, <a href="#ko0210">ko</a>, <a href="#no0210">no</a>, <a href="#pa0210">pa</a>, <a href="#tl0210">tl</a>, <a href="#yue0210">yue</a>, <a href="#zh0210">zh</a></td>
     </tr>
     <tr>
       <td>0212</td>
@@ -4853,19 +4901,19 @@
       <td>0231</td>
       <td><a href="http://africanstorybook.org/stories/weather-book">Weather book</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ar0231">ar</a>, <a href="#de0231">de</a>, <a href="#es0231">es</a>, <a href="#fa0231">fa</a>, <a href="#hi0231">hi</a>, <a href="#ko0231">ko</a>, <a href="#nl0231">nl</a>, <a href="#nn0231">nn</a>, <a href="#no0231">no</a>, <a href="#pa0231">pa</a>, <a href="#tl0231">tl</a>, <a href="#yue0231">yue</a>, <a href="#zh0231">zh</a></td>
+      <td><a href="#ar0231">ar</a>, <a href="#de0231">de</a>, <a href="#es0231">es</a>, <a href="#fa0231">fa</a>, <a href="#hi0231">hi</a>, <a href="#it0231">it</a>, <a href="#ko0231">ko</a>, <a href="#nl0231">nl</a>, <a href="#nn0231">nn</a>, <a href="#no0231">no</a>, <a href="#pa0231">pa</a>, <a href="#tl0231">tl</a>, <a href="#yue0231">yue</a>, <a href="#zh0231">zh</a></td>
     </tr>
     <tr>
       <td>0234</td>
       <td><a href="http://africanstorybook.org/stories/andiswa-soccer-star">Andiswa Soccer Star</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ar0234">ar</a>, <a href="#es0234">es</a>, <a href="#fa0234">fa</a>, <a href="#gu0234">gu</a>, <a href="#ko0234">ko</a>, <a href="#no0234">no</a>, <a href="#pa0234">pa</a>, <a href="#tl0234">tl</a>, <a href="#yue0234">yue</a>, <a href="#zh0234">zh</a></td>
+      <td><a href="#ar0234">ar</a>, <a href="#es0234">es</a>, <a href="#fa0234">fa</a>, <a href="#gu0234">gu</a>, <a href="#it0234">it</a>, <a href="#ko0234">ko</a>, <a href="#no0234">no</a>, <a href="#pa0234">pa</a>, <a href="#tl0234">tl</a>, <a href="#yue0234">yue</a>, <a href="#zh0234">zh</a></td>
     </tr>
     <tr>
       <td>0243</td>
       <td><a href="http://africanstorybook.org/stories/holidays-grandmother">Holidays with grandmother</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0243">ar</a>, <a href="#bn0243">bn</a>, <a href="#es0243">es</a>, <a href="#fa0243">fa</a>, <a href="#ko0243">ko</a>, <a href="#pa0243">pa</a>, <a href="#tl0243">tl</a>, <a href="#tr0243">tr</a>, <a href="#yue0243">yue</a>, <a href="#zh0243">zh</a></td>
+      <td><a href="#ar0243">ar</a>, <a href="#bn0243">bn</a>, <a href="#es0243">es</a>, <a href="#fa0243">fa</a>, <a href="#it0243">it</a>, <a href="#ko0243">ko</a>, <a href="#pa0243">pa</a>, <a href="#tl0243">tl</a>, <a href="#tr0243">tr</a>, <a href="#yue0243">yue</a>, <a href="#zh0243">zh</a></td>
     </tr>
     <tr>
       <td>0248</td>
@@ -4901,7 +4949,7 @@
       <td>0271</td>
       <td><a href="http://africanstorybook.org/stories/two">Two</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ar0271">ar</a>, <a href="#de0271">de</a>, <a href="#es0271">es</a>, <a href="#fa0271">fa</a>, <a href="#gu0271">gu</a>, <a href="#ko0271">ko</a>, <a href="#nn0271">nn</a>, <a href="#no0271">no</a>, <a href="#pa0271">pa</a>, <a href="#tl0271">tl</a>, <a href="#vi0271">vi</a>, <a href="#yue0271">yue</a>, <a href="#zh0271">zh</a></td>
+      <td><a href="#ar0271">ar</a>, <a href="#de0271">de</a>, <a href="#es0271">es</a>, <a href="#fa0271">fa</a>, <a href="#gu0271">gu</a>, <a href="#it0271">it</a>, <a href="#ko0271">ko</a>, <a href="#nn0271">nn</a>, <a href="#no0271">no</a>, <a href="#pa0271">pa</a>, <a href="#tl0271">tl</a>, <a href="#vi0271">vi</a>, <a href="#yue0271">yue</a>, <a href="#zh0271">zh</a></td>
     </tr>
     <tr>
       <td>0277</td>
@@ -4937,13 +4985,13 @@
       <td>0296</td>
       <td><a href="http://africanstorybook.org/stories/tom-banana-seller">Tom the banana seller</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0296">ar</a>, <a href="#es0296">es</a>, <a href="#fa0296">fa</a>, <a href="#ko0296">ko</a>, <a href="#pa0296">pa</a>, <a href="#tl0296">tl</a>, <a href="#zh0296">zh</a></td>
+      <td><a href="#ar0296">ar</a>, <a href="#es0296">es</a>, <a href="#fa0296">fa</a>, <a href="#it0296">it</a>, <a href="#ko0296">ko</a>, <a href="#pa0296">pa</a>, <a href="#tl0296">tl</a>, <a href="#zh0296">zh</a></td>
     </tr>
     <tr>
       <td>0302</td>
       <td><a href="http://africanstorybook.org/stories/fire">Fire</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0302">ar</a>, <a href="#eo0302">eo</a>, <a href="#es0302">es</a>, <a href="#fa0302">fa</a>, <a href="#gu0302">gu</a>, <a href="#ko0302">ko</a>, <a href="#nn0302">nn</a>, <a href="#no0302">no</a>, <a href="#pa0302">pa</a>, <a href="#tl0302">tl</a>, <a href="#yue0302">yue</a>, <a href="#zh0302">zh</a></td>
+      <td><a href="#ar0302">ar</a>, <a href="#eo0302">eo</a>, <a href="#es0302">es</a>, <a href="#fa0302">fa</a>, <a href="#gu0302">gu</a>, <a href="#it0302">it</a>, <a href="#ko0302">ko</a>, <a href="#nn0302">nn</a>, <a href="#no0302">no</a>, <a href="#pa0302">pa</a>, <a href="#tl0302">tl</a>, <a href="#yue0302">yue</a>, <a href="#zh0302">zh</a></td>
     </tr>
     <tr>
       <td>0306</td>
